more changes which do not actually work

--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aarohi World</title>
-  </head>
-  <body>
-    <div class="preloader" id="preloader">
-      <h1>Loading</h1>
-    </div>
-    <div id="app"></div>
-    <div class="hud" id="hud">
-      <div class="time" id="time"></div>
-      <div class="location" id="location"></div>
-      <div class="score"></div>
-      <div class="life"></div>
-      <div class="modal" id="modal">
-        <div class="content" id="modal-content"></div>
-        <div class="close-button" id="modal-close-button">x</div>
-      </div>
-      <div class="right-bar"></div>
-      <div class="bottom-left"></div>
-      <div class="bottom-middle"></div>
-      <div class="bottom-right">
-        <div class="controls">
-          <button class="w" id="w">W</button>
-          <button class="a" id="a">A</button>
-          <button class="s" id="s">S</button>
-          <button class="d" id="d">D</button>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Aarohi World</title>
+    </head>
+    <body>
+        <div class="preloader" id="preloader">
+            <h1>Loading</h1>
         </div>
-      </div>
-    </div>
-    <div class="hidden" id="hidden">
-      
-    </div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+        <div id="app"></div>
+        <div class="hud" id="hud">
+            <div class="time" id="time"></div>
+            <div class="location" id="location"></div>
+            <div class="score"></div>
+            <div class="life"></div>
+            <div class="modal" id="modal">
+                <div class="content" id="modal-content"></div>
+                <div class="close-button" id="modal-close-button">x</div>
+            </div>
+            <div class="right-bar"></div>
+            <div class="bottom-left"></div>
+            <div class="bottom-middle"></div>
+            <div class="bottom-right">
+                <div class="controls">
+                    <button class="w" id="w">W</button>
+                    <button class="a" id="a">A</button>
+                    <button class="s" id="s">S</button>
+                    <button class="d" id="d">D</button>
+                </div>
+            </div>
+        </div>
+        <div class="hidden" id="hidden"></div>
+        <script defer type="module" src="/src/main.ts"></script>
+    </body>
 </html>
